<resources>
    <string name="app_name">Wechat</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="menu_groupchat">GroupChat</string>
    <string name="menu_feedback">FeedBack</string>
    <string name="menu_newfriend">NewFriend</string>
    <string name="menu_scan">Scan</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_found">Show</string>
    <string name="tab_me">Me</string>
    <string name="tab_message">Message</string>
    <string name="action_settings">Settings</string>
</resources>
