<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.wechat.mainwindow.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search_holo_light"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />


    <item
        android:id="@+id/action_groupchat"
        android:icon="@drawable/ic_menu_allfriends"
        android:title="@string/menu_groupchat"/>
    <item
        android:id="@+id/action_addfriend"
        android:icon="@drawable/ic_menu_invite"
        android:title="@string/menu_newfriend"/>
    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_menu_scan"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_menu_feedback"
        android:title="@string/menu_feedback"/>
</menu>
